--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.11.1",
+    "axios": "^0.26.1",
+    "micro": "^9.3.4",
     "next": "12.1.1",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.7.0",
+    "ts-tiny-invariant": "^1.0.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
+    "@types/micro-cors": "^0.1.2",
+    "@types/node": "^17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "apollo-server-micro": "^3.6.6",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.1",
-    "typescript": "4.6.3"
+    "graphql": "^16.3.0",
+    "micro-cors": "^0.1.1",
+    "postcss": "^8.4.12",
+    "prisma": "^3.11.1",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3"
   }
 }
