--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
     "axios": "^0.26.1",
     "micro": "^9.3.4",
     "next": "12.1.1",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
+    "react-cloudinary-upload-widget": "^1.5.0",
     "react-dom": "17.0.2",
+    "react-loading": "^2.0.3",
+    "react-toastify": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.7.0",
     "ts-tiny-invariant": "^1.0.5"
