--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.2",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
     "axios": "^0.26.1",
@@ -30,10 +33,20 @@
     "@types/node": "^17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "apollo-server-micro": "^3.6.6",
     "autoprefixer": "^10.4.4",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.1",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.4",
+    "eslint-config-next": "^12.1.2",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-typescript": "^0.14.0",
     "graphql": "^16.3.0",
     "micro-cors": "^0.1.1",
     "postcss": "^8.4.12",
