--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@apollo/client": "^3.5.10",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.5.2",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
+    "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
+    "lodash": "^4.17.21",
     "micro": "^9.3.4",
     "next": "12.1.1",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-cloudinary-upload-widget": "^1.5.0",
     "react-dom": "17.0.2",
     "react-loading": "^2.0.3",
